Seller Operations: grid + saved views